Bug 2472 - bits/siginfo.h typo
Summary: bits/siginfo.h typo
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.4
: P2 normal
Target Milestone: ---
Assignee: Ulrich Drepper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-03-20 22:40 UTC by Samuel Thibault
Modified: 2018-04-19 13:44 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments
fixes ILL_ILL_OPN -> ILL_ILLOPN typo (265 bytes, patch)
2006-03-20 22:40 UTC, Samuel Thibault
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Thibault 2006-03-20 22:40:12 UTC
Hi,

There is a little typo in bits/siginfo.h for ILL_ILLOPN.

Regards,
Samuel
Comment 1 Samuel Thibault 2006-03-20 22:40:52 UTC
Created attachment 935 [details]
fixes ILL_ILL_OPN -> ILL_ILLOPN typo
Comment 2 Ulrich Drepper 2006-04-01 19:19:19 UTC
Fixed in CVS.