[BZ #2472]

* bits/siginfo.h: Fix typo in ILL_ILLOPN definition.